# Kernel-key-mapping-ai

./: .gitignore  CMakeLists.txt  README.md  settings.gradle
.github/workflows/: build.yml  cleanup-releases.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  kma_jni.cpp
app/src/main/java/com/kma/mapping/: KeyButton.kt  KeyButtonView.kt  MainActivity.kt  MappingService.kt  NativeBridge.kt  RootShell.kt
app/src/main/res/values/: strings.xml  themes.xml
configs/: default.conf
extracted/: kernel.h  main.cpp
extracted/Dawan_0121_v11s_256_save_path/: Dawan_0121_v11s_256.param  shell_info.txt
src/: driver_adapter.cpp  driver_adapter.h  input_reader.cpp  input_reader.h  kma_config.cpp  main.cpp  mapper.cpp  mapper.h
